# stdx

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon  flake.nix
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  coverage.yml  release.yml
build-utils/: CDBGenerator.zig  Packager.zig  ProjectPaths.zig  steps.zig
cmake/: config.h.in
include/: arena.hh  assert.hh  counter.hh  diagnostic.hh  enum.hh  hash.hh  indent.hh  iterator.hh  json.hh  math.hh  memory.hh  option.hh  profiler.hh  result.hh  source_file.hh  string.hh  style.hh  type_traits.hh  types.hh  utility.hh  variant.hh
include/fixed/: enum_map.hh  hash_map.hh  storage.hh  vector.hh
include/stdx/: arena.hh  assert.hh  enum.hh  hash.hh  iterator.hh  json.hh  math.hh  memory.hh  option.hh  profiler.hh  result.hh  string.hh  style.hh  type_traits.hh  types.hh  utility.hh  variant.hh
include/stdx/fixed/: enum_map.hh  hash_map.hh  hash_table.hh  storage.hh  string.hh  vector.hh
merged/: index.js
merged/kcov-merged/: arena.hh.f8461da8.html  arena.hh.f8461da8.js  assert.hh.1c1ac16f.html  assert.hh.1c1ac16f.js  cobertura.xml  codecov.json  cov.xml  coverage.json  enum.hh.4324d72.html  enum.hh.4324d72.js  enum_map.hh.28359d09.html  enum_map.hh.28359d09.js  hash.hh.2c2d9bf5.html  hash.hh.2c2d9bf5.js  hash_table.hh.426833a1.html  hash_table.hh.426833a1.js  index.js  json.hh.75d70c13.html  json.hh.75d70c13.js  math.hh.cc356842.html  math.hh.cc356842.js  memory.hh.24ea16ff.html  memory.hh.24ea16ff.js  option.hh.4fe60723.html  option.hh.4fe60723.js  profiler.cc.b74afb84.html  profiler.cc.b74afb84.js  result.hh.ef85ac0f.html  result.hh.ef85ac0f.js  sonarqube.xml  storage.hh.6c5f1de0.html  storage.hh.6c5f1de0.js  string.hh.61466f3f.html  string.hh.61466f3f.js  string.hh.a2e0ebbc.html  string.hh.a2e0ebbc.js  summary.db  utility.hh.356170b5.html  utility.hh.356170b5.js  variant.hh.7f811bc1.html  (+3 more)
merged/merged-kcov-output/: coverage.db
merged/merged-kcov-output/metadata/: 04324d72  1c1ac16f  24ea16ff  28359d09  2c2d9bf5  356170b5  426833a1  4fe60723  61466f3f  6c5f1de0  75d70c13  7f811bc1  a2e0ebbc  b74afb84  bf8613e7  cc356842  ef85ac0f  f8461da8
src/: arena.cc  diagnostic.cc  profiler.cc  source_file.cc  utility.cc
tests/: test_arena.cc  test_counter.cc  test_diagnostic.cc  test_enum.cc  test_hash.cc  test_indent.cc  test_json.cc  test_math.cc  test_memory.cc  test_optional.cc  test_result.cc  test_source_file.cc  test_string.cc  test_variant.cc
tests/fixed/: test_enum_map.cc  test_hash_map.cc  test_hash_table.cc  test_string.cc  test_vector.cc
tests/fuzz/: sample.cc
tests/helpers/: dummy.hh  enum.hh  inheritance.hh  raii_tracker.hh
tools/compressor/: c.h  main.zig
tools/harness/: allocator.cc  fuzzer.cc  hooks.hh  listener.cc  main.zig  runner.cc
